# bazel-steward

./: .bazel-steward.conf  .bazelrc  .bazelversion  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  action.yaml  bazel-bazel-steward-b243c4288a8a  bazel-steward.yaml  change.txt  maven_install.json  projectview.bazelproject  setup-bsp.sh
action/: BUILD.bazel
action/src/main/kotlin/org/virtuslab/bazelsteward/action/: BUILD.bazel  ReleaseTagResolver.kt  ResolveReleaseTagMain.kt
action/src/test/kotlin/org/virtuslab/bazelsteward/action/: BUILD.bazel  (+1 more)
app/: BUILD.bazel
app/src/main/: BUILD.bazel
app/src/main/resources/: internal-config.yaml  simplelogger.properties
app/src/test/: BUILD.bazel
app/src/test/resources/: MODULE.bazel.snippet  WORKSPACE.bzlignore  example-config.yaml
app/src/test/resources/config/: WORKSPACE.bzlignore
app/src/test/resources/config/app/: BUILD.bzlignore
app/src/test/resources/config/core/: BUILD.bzlignore
app/src/test/resources/dummy/: WORKSPACE.bzlignore
config/src/main/: BUILD.bazel
config/src/main/resources/: bazel-steward-schema.json
config/src/test/: BUILD.bazel
config/src/test/resources/: .bazel-steward-correct.yaml  .bazel-steward-fail.yaml  .bazel-steward-fail2.yaml
e2e/src/test/: BUILD.bazel
e2e/src/test/resources/bazel/bazelOnly/: WORKSPACE.bzlignore
e2e/src/test/resources/bazel/bazeliskrc/: .bazel-steward.yaml  .bazeliskrc  WORKSPACE.bzlignore
e2e/src/test/resources/bazel/trivial/: .gitignore  WORKSPACE.bzlignore
e2e/src/test/resources/bzlmod/example/: .bazelrc  MODULE.bazel.bzlignore
e2e/src/test/resources/hook/commit/: .bazel-steward.yaml  .bazelrc  WORKSPACE.bzlignore  generate_litter.sh
e2e/src/test/resources/hook/pin/: .bazel-steward.yaml  WORKSPACE.bzlignore  maven_install.json
e2e/src/test/resources/hook/pr/: .bazel-steward.yaml  BUILD.bzlignore  WORKSPACE.bzlignore  generate_litter.sh
e2e/src/test/resources/maven/group/: .bazel-steward.yaml  .bazelrc  WORKSPACE.bzlignore
e2e/src/test/resources/maven/trivial/: WORKSPACE.bzlignore
e2e/src/test/resources/maven/updating-pr/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/base/: .bazelrc  .gitignore
e2e/src/test/resources/rules/heuristic/: BUILD.bazel
e2e/src/test/resources/rules/heuristic/heuristic_rules_multiple/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic/heuristic_rules_multiple_urls_variables/: Result_WORKSPACE.bzlignore  WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic/heuristic_rules_sha_no_string/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic/heuristic_rules_sha_string/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic/heuristic_rules_strip_prefix/: Result_WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic/heuristic_rules_variables/: Result_WORKSPACE.bzlignore  WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic/heuristic_rules_variables_2/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_multiple/: Result_WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_multiple_urls_variables/: Result_WORKSPACE.bzlignore  WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_sha_no_string/: Result_WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_sha_string/: Result_WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_strip_prefix/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_variables/: Result_WORKSPACE.bzlignore
e2e/src/test/resources/rules/heuristic_rules_variables_2/: Result_WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_apple/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_cc/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_docker/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_dotnet/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_jvm_external/: .bazel-steward.yaml  WORKSPACE.bzlignore  WORKSPACE.expected
e2e/src/test/resources/rules/rules_kotlin/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_proto/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_python/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_scala/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/rules_skylib/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/all/: .gitignore  WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_apple/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_cc/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_closure/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_docker/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_dotnet/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_foreign_cc/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_go/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_java/: BUILD.bzlignore  WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_jvm_external/: .bazelrc  WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_k8s/: .gitignore  WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_kotlin/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_proto/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_python/: .bazelversion  WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_scala/: WORKSPACE.bzlignore
e2e/src/test/resources/rules/trivial/rules_skylib/: WORKSPACE.bzlignore
kinds/bazel/: BUILD.bazel
kinds/bazel/resources/: BUILD.bazel
kinds/bazel/rules/src/main/resources/: BUILD.bazel  dump_repositories.bzl  dump_repositories.bzlignore
tools/lint/: BUILD.bazel
tools/publish/: BUILD.bazel  central_portal.py  central_portal_test.py  pom-template.xml  publish.bzl  publish.sh  release.bzl  release_staged.py  set_version.py  smoke-test.sh  upload.py  version.bzl
(+364 files in other folders)
