module(
    name = "bazel_steward",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_kotlin", version = "2.3.20")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.8.0",
        "io.get-coursier:interface:1.0.19",
        "commons-io:commons-io:2.16.1",
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.17.0",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0",
        "com.fasterxml.jackson.core:jackson-core:2.17.0",
        "com.networknt:json-schema-validator:1.4.3",
        "org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3.6",
        "org.kohsuke:github-api:1.321",
        "io.github.microutils:kotlin-logging-jvm:3.0.5",
        "org.slf4j:slf4j-simple:2.0.13",
        "org.json:json:20240303",
        "org.apache.commons:commons-text:1.12.0",
        "net.pearx.kasechange:kasechange-jvm:1.4.1",
        # tests
        "org.junit.platform:junit-platform-commons:1.10.2",
        "org.junit.platform:junit-platform-console:1.10.2",
        "org.junit.platform:junit-platform-engine:1.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-suite-api:1.10.2",
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.jupiter:junit-jupiter-params:5.10.2",
        "org.apiguardian:apiguardian-api:1.1.2",
        "org.opentest4j:opentest4j:1.3.0",
        "org.assertj:assertj-core:3.25.3",
        "io.kotest:kotest-assertions-api-jvm:5.8.1",
        "io.kotest:kotest-assertions-core-jvm:5.8.1",
        "io.kotest:kotest-assertions-shared-jvm:5.8.1",
        "io.kotest:kotest-common-jvm:5.8.1",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven", "unpinned_maven")

register_toolchains("//:kotlin_toolchain")
