load("@rules_java//java:defs.bzl", "java_binary")
load("//tools/publish:release.bzl", "bazel_steward_release")

java_binary(
    name = "app",
    main_class = "org.virtuslab.bazelsteward.app.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//app/src/main",
    ],
)

bazel_steward_release(
    name = "maven",
    artifact = "bazel-steward",
    group = "org.virtuslab",
    maven_profile = "org.virtuslab",
    pom_template = "//tools/publish:pom-template.xml",
    resources = glob(["src/main/resources/**"]),
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//app/src/main",
    ],
)
