load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm_external//:defs.bzl", "java_export")

java_binary(
    name = "app",
    main_class = "org.virtuslab.bazelsteward.app.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//app/src/main",
    ],
)

java_export(
    name = "maven",
    srcs = glob(
        ["src/main/kotlin/**/*.kt"],
        allow_empty = True,
    ),
    maven_coordinates = "org.virtuslab:bazel-steward:0.0.0",
    pom_template = "//tools/publish:pom-template.xml",
    resources = glob(
        ["src/main/resources/**"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//app/src/main",
    ],
)
