load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_kotlin//src/main/starlark/core/repositories:versions.bzl", "versions")

# Snapshot rules_kotlin's pinned ktlint version + sha256
# (@rules_kotlin//src/main/starlark/core/repositories:versions.bzl
# PINTEREST_KTLINT) into a file at BUILD evaluation time. Any change to
# rules_kotlin will re-trigger this genrule, and the diff_test below will fail
# until .pre-commit-config.yaml is updated to match.
genrule(
    name = "rules_kotlin_ktlint_pin",
    outs = ["rules_kotlin_ktlint_pin.txt"],
    cmd = "printf 'version=%s\\nsha256=%s\\n' '{ver}' '{sha}' > $@".format(
        sha = versions.PINTEREST_KTLINT.sha256,
        ver = versions.PINTEREST_KTLINT.version,
    ),
)

# Extract --ktlint-version and --formatter-jar-checksum from
# .pre-commit-config.yaml into the same two-line shape, so we can byte-diff
# them. grep -oE is POSIX/BSD-portable enough for both Linux CI and macOS.
genrule(
    name = "pre_commit_ktlint_pin",
    srcs = ["//:pre_commit_config"],
    outs = ["pre_commit_ktlint_pin.txt"],
    cmd = """{
        grep -oE -- '--ktlint-version=[^[:space:]]+' $(location //:pre_commit_config) \
            | sed 's/--ktlint-version=/version=/'
        grep -oE -- '--formatter-jar-checksum=[^[:space:]]+' $(location //:pre_commit_config) \
            | sed 's/--formatter-jar-checksum=/sha256=/'
    } > $@""",
)

diff_test(
    name = "ktlint_version_sync_test",
    failure_message = (
        "rules_kotlin's PINTEREST_KTLINT pin " +
        "(@rules_kotlin//src/main/starlark/core/repositories:versions.bzl) " +
        "no longer matches the --ktlint-version / --formatter-jar-checksum " +
        "values in .pre-commit-config.yaml. Update .pre-commit-config.yaml " +
        "so the local pre-commit hook and the `bazel-test klint` matrix " +
        "lint with the same ktlint binary."
    ),
    file1 = ":rules_kotlin_ktlint_pin",
    file2 = ":pre_commit_ktlint_pin",
    tags = ["unit"],
)
