library(
    srcs = glob(["kotlin/**/*.kt"]),
    resources = glob(
        ["resources/**"],
    ),
    deps = [
        "//common",
        "//config",
        "//core",
        "//github",
        "//maven",
        "@maven//:org_jetbrains_kotlinx_kotlinx_cli_jvm",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)
