library(
    srcs = glob(["kotlin/**/*.kt"]),
    resources = glob(["resources/**"]),
    deps = [
        "//core",
        "//github",
        "//kinds/bazel:rules",
        "//kinds/bazel:version",
        "//kinds/bzlmod",
        "//kinds/maven",
        "//repo-config",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_jetbrains_kotlinx_kotlinx_cli_jvm",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)
