unit_tests(
    srcs = glob(["kotlin/org/virtuslab/bazelsteward/app/*.kt"]),
    resources = glob(
        ["resources/**"],
    ),
    test_package = "org.virtuslab.bazelsteward.app",
    deps = [
        "//app/src/main",
        "//app/src/test/kotlin/org/virtuslab/bazelsteward/fixture",
        "//core",
    ],
)
