kt_jvm_library(
    name = "app",
    srcs = glob(["**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//core",
        "//maven",
    ],
)

load("@io_bazel_rules_kotlin//kotlin:lint.bzl", "ktlint_fix")
load("@io_bazel_rules_kotlin//kotlin:lint.bzl", "ktlint_test")

ktlint_test(
    name = "lint_test",
    srcs = glob(["**/*.kt"]),
    config = "//:lint_config",
)

ktlint_fix(
    name = "lint_fix",
    srcs = glob(["**/*.kt"]),
    config = "//:lint_config",
)
