library(
    name = "bazel",
    srcs = glob(["**/*.kt"]),
    resources = glob(
        ["resources/**"],
    ),
    deps = [
        "//common",
        "//core",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
    ],
)
