unit_tests(
    srcs = glob(["**/*.kt"]),
    resource_strip_prefix = "core/src/test/kotlin/org/virtuslab/bazelsteward/resources",
    resources = ["//core/src/test/kotlin/org/virtuslab/bazelsteward/resources"],
    test_package = "org.virtuslab.bazelsteward.core",
    deps = [
        "//core",
        "//maven",  #TODO: fix this
        "@maven//:commons_io_commons_io",
    ],
)
