integration_test_suite(
    resources = ["//e2e/src/test/resources"],
    test_package = "org.virtuslab.bazelsteward.e2e",
    deps = [
        "//app/src/main",
        "//app/src/test/kotlin/org/virtuslab/bazelsteward/fixture",
        "//e2e/src/test/kotlin/org/virtuslab/bazelsteward/e2e/fixture",
    ],
)
