integration_test_suite(
    size = "small",
    resources = ["//e2e/src/test/resources/rules"],
    test_package = "org.virtuslab.bazelsteward.e2e.rules",
    deps = [
        "//app/src/main",
        "//app/src/test/kotlin/org/virtuslab/bazelsteward/fixture",
        "//e2e/src/test/kotlin/org/virtuslab/bazelsteward/e2e/rules/fixture",
    ],
)
