library(
    srcs = glob(["**/*.kt"]),
    resources = ["//repo-config/src/main/resources"],
    deps = [
        "//core",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
        "@maven//:com_networknt_json_schema_validator",
        "@maven//:io_github_microutils_kotlin_logging_jvm",
        "@maven//:net_pearx_kasechange_kasechange_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_jdk8",
    ],
)
