library(
    name = "rules",
    srcs = glob(["**/*.kt"]),
    resource_strip_prefix = "kinds/bazel/rules/src/main/resources",
    resources = ["//kinds/bazel/rules/src/main/resources"],
    deps = [
        "//core",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
        "@maven//:com_networknt_json_schema_validator",
        "@maven//:org_jetbrains_kotlinx_kotlinx_cli_jvm",
        "@maven//:org_json_json",
        "@maven//:org_kohsuke_github_api",
    ],
)
